--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="https://github.com/Freitz2021/Freitz2021.github.io/blob/main/About%20Me">About</a></li>
+	        	<li><a href="https://Freitz2021.github.io/About Me">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
