--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="https://Freitz2021.github.io/About Me">About</a></li>
+	        	<li><a href="https://Freitz2021.github.io/About.html">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
@@ -17,13 +17,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Freitz Mondejar!</h1>
-				<p>I'm best known as the doooohhh from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known as the doooohhh from <em>A Touch of Evil</em> Don't trust me. <a href="https://Freitz2021.github.io/About.html">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:freitzm@gmail.com">email</a></li>
-        		<li><a href="https://github.com/Freitz2021">github.com/freitz</a></li>
+        		<li><a href="https://Freitz2021.github.io/About.html">github.com/freitz</a></li>
 			</ul>
 		</footer>
 	</body>
