--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="https://Freitz2021.github.io/About.html">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="https://Freitz2021.github.io/blog.html">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
