--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
 <h1> Chendy Mondejar</h>
+<h2> I LOVE YOU!</h2> 
 
 <p>Trustworthy is someone who is honest who can be entrusted with your secrets or with anything else of importance.<br>An example of trustworthy is the person who babysits your kids or who you tell your secrets to.<br>Being trustworthy is admirable and desirable. <br>It's a trait other people look for in a person and it's c onfirmation that you're reliable, supportive and honest.<br> If you'd like to become more trustworthy and have others come to rely on you, <br>there are some great ways to go about doing this.<br>Breaking apart the word trustworthy gives you a clue to its meaning. <br>It combines the common word trust, which describes something you can rely on, <br>and the word worthy, which describes something that deserves respect. <br>So something — or someone — that's trustworthy deserves your trust.</p>
