--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Freitz Mondejar, Liaison</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="https://Freitz2021.github.io/About.html">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="https://Freitz2021.github.io/blog.html">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+
+
 <h1> Chendy Mondejar</h>
 <h2> I LOVE YOU!</h2> 
 
