--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1> <style= color:red>;"Hi there, I'm Freitz Mondejar!</h1>
-			<h2> <style= color:blue;>"<a href="https://Freitz2021.github.io/blog.html">Hi Chendy Mondejar!</h2> 
+        		<h1> <"style= color:red;">;Hi there, I'm Freitz Mondejar!</h1>
+			<h2> <"style= color:blue;"><a href="https://Freitz2021.github.io/blog.html">Hi Chendy Mondejar!</h2> 
 				
 				<p>I'm best known as the doooohhh from <em>A Touch of Evil</em> Don't trust me. <a href="https://Freitz2021.github.io/About.html">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
